# pico_sigrok_ui

./: .gitignore  CMakeLists.txt  main.c
.github/workflows/: build.yml
backend/: server.c
src/display/: st7796.c  st7796.h
src/touch/: gt911.h
src/ui/: ui.h
